--- a/GE.WebUI/Views/SiteTests/_StepGuess.cshtml
+++ b/GE.WebUI/Views/SiteTests/_StepGuess.cshtml
@@ -1,8 +1,8 @@
 ﻿@model SxVMSiteTestAnswer
 @{
     Layout = null;
-    var oldSteps = (SxVMSiteTestStep[])ViewBag.OldSteps;
-    SxVMSiteTestStep step;
+    var oldSteps = (SxVMSiteTestStepGuess[])ViewBag.OldSteps;
+    SxVMSiteTestStepGuess step;
 }
 
 @if (ViewBag.SubjectsCount == null || ViewBag.SubjectsCount > 1)
