--- a/GE.WebAdmin/Views/SiteTests/Index.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Index.cshtml
@@ -11,10 +11,42 @@
     @Html.Partial("_gridview", Model)
 </div>
 
+<div class="modal fade" tabindex="-1" role="dialog" id="modal-rules">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section scripts{
     <script>
         $(function () {
             $('#site-tests').sx_gv();
+
+            $('#site-tests').on('click', '.rules-btn', function () {
+                var url = $(this).attr('href');
+                $modal = $('#modal-rules');
+                $.ajax({
+                    method: 'post',
+                    url: url,
+                    success: function (result) {
+                        $modal.find('.modal-title').html(result.Title);
+                        $modal.find('.modal-body').html(result.Rules);
+                        $modal.modal('show');
+                    }
+                });
+                return false;
+            });
         });
     </script>
 }
