--- a/GE.WebUI/Views/SiteTests/Details.cshtml
+++ b/GE.WebUI/Views/SiteTests/Details.cshtml
@@ -2,33 +2,31 @@
 
 @model SxVMSiteTestAnswer
 @{
-    ViewBag.Title = Model.Question!=null && Model.Question.Test!=null ? Model.Question.Test.Title : "Страница прохождения теста";
+    ViewBag.Title = Model.Question != null && Model.Question.Test != null ? Model.Question.Test.Title : "Страница прохождения теста";
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
-    ViewBag.Description = ViewBag.Description ?? Model.Question != null && Model.Question.Test!=null ? Model.Question.Test.Description : "Страница прохождения теста";
+    ViewBag.Description = ViewBag.Description ?? Model.Question != null && Model.Question.Test != null ? Model.Question.Test.Description : "Страница прохождения теста";
     ViewBag.Keywords = ViewBag.Keywords ?? "Игровые тесты, тесты для игр";
     var testType = Model.Question.Test.Type;
-    var letterCount = (int)ViewBag.LettersCount;
 }
 
 @Html.Partial("_Breadcrumbs", (VMBreadcrumb[])ViewBag.Breadcrumbs)
 
 @if (Model.Question != null && Model.Question.Test != null)
 {
-    if (Equals(testType, SxSiteTest.SiteTestType.Normal))
-    {
-        <input type="hidden" name="balsCount" id="balsCount" value="-7.5" />
-    }
     <div id="st-page">
         @if (Equals(testType, SxSiteTest.SiteTestType.Guess))
         {
             @Html.Partial("_StepGuess", Model)
         }
-        else if(Equals(testType, SxSiteTest.SiteTestType.Normal))
+        else if (Equals(testType, SxSiteTest.SiteTestType.Normal))
         {
+            <script>
+                var continueStep = true;
+            </script>
             @Html.Partial("_StepNormal", Model)
         }
     </div>
-    
+
     <div class="text-center">
         @Html.SxShareButtons(global_asax.ShareButtons)
     </div>
@@ -38,20 +36,23 @@
         <script src="~/content/dist/js/jquery.unobtrusive-ajax.min.js"></script>
         <script src="~/content/dist/js/goodshare.min.js"></script>
         <script>
+            var interval;
+            var lettersInSecond = 20;//1200 знаков в минуту
+            var secondCounter = 0;
             $(function () {
                 //guess
                 $('#st-page').on('click', '.sx-indicator > span', function () {
                     $span = $(this);
                     $span.closest('.sx-indicator').prepend('<i class="fa fa-spinner fa-spin"></i>');
-    var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
-    var isCorrect = $span.data('dir') == true;
+                    var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
+                    var isCorrect = $span.data('dir') == true;
 
                     $form = $span.closest('form');
                     $input = $form.find('input[data-q-id="' + id + '"]')
                     $input.val(isCorrect);
 
                     $form.submit();
-});
+                });
 
                 //normal
                 $('#st-page').on('change', '.test-normal-q-list [type="radio"]', function () {
@@ -70,11 +71,55 @@
                 });
 
                 $('#st-page').on('click', '.test-normal-q-list__dont-btn', function () {
-                    var balsCount = parseFloat($('#balsCount').val());
                     $h4 = $('#st-page [data-subject-id]');
                     $h4.prepend('<i class="fa fa-spinner fa-spin"></i>');
                 });
+
+                setStepInterval();
             });
+
+            function setStepInterval() {
+                clearStepInterval();
+                if (!continueStep)
+                {
+                    $('.s-s').last().remove();
+                    return;
+                }
+
+                $subject = $('.s-s').last();
+                $lettersCountInput = $subject.children('[name$="LettersCount"]');
+                $goodReadInput = $subject.children('[name$="BallsGoodRead"]');
+                $badReadInput = $subject.children('[name$="BallsBadRead"]');
+
+                var secondsCount = parseInt(parseInt($lettersCountInput.val()) / lettersInSecond);
+                $goodReadInput.val(secondsCount * 3);
+                interval = setInterval(function () {
+                    secondCounter++;
+
+                    var ballsGoodRead = $goodReadInput.val();
+                    if (ballsGoodRead != 0)
+                        $goodReadInput.val(ballsGoodRead - 3);
+                    else
+                        $badReadInput.val($badReadInput.val() - 3);
+
+                    //console.log(secondCounter);
+                }, 1000);
+            }
+
+            function clearStepInterval() {
+                if (interval) {
+                    clearInterval(interval);
+                    secondCounter = 0;
+                }
+            }
+
+            function fillNormalResults(result)
+            {
+                $(result).each(function () {
+                    $item = $(this);
+                    console.log($item);
+                });
+            }
         </script>
     }
 }
