--- a/GE.WebUI/less/share-buttons.less
+++ b/GE.WebUI/less/share-buttons.less
@@ -45,6 +45,10 @@
     outline: none !important;
 }
 
+.share-buttons__like-btn .share-buttons__counter{
+    margin-left:@def-pad;
+}
+
 .share-buttons__icon {
     position: absolute;
     top: 0;
