--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -29,17 +29,25 @@
             <img class="f-picture" alt="@Model.Title" src="@Url.Action("Picture", "Pictures", new { id= Model.FrontPictureId })" />
         }
         @Html.Raw(Model.Html)
-        @Html.SxShareButtons(global_asax.ShareButtons)
+
+
+        @Html.SxShareButtons(global_asax.ShareButtons, lbSettings: new SxExtantions.SxLikeButtonsSettings
+   {
+       LikeDownCount = () => Model.LikeDownCount,
+       LikeUpCount = () => Model.LikeUpCount,
+       MaterialId = () => Model.Id,
+       ModelCoreType = Model.ModelCoreType
+   })
     </div>
 
     @Html.Partial("_MaterialInfo", Model)
 
     @*aphorisms*@
     <div id="aphorisms">
-        @{Html.RenderAction("random", new { controller = "aphorism" }); }
+        @{Html.RenderAction("Random", "Aphorism"); }
     </div>
 
-    @Html.Action("likematerials", new { controller = "articles", materialId = Model.Id, modelCoreType = Model.ModelCoreType, amount = 9 })
+    @Html.Action("LikeMaterials", "Articles", new { materialId = Model.Id, modelCoreType = Model.ModelCoreType, amount = 9 })
 
     @{
         banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
