--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -22,6 +22,9 @@
                         <li>
                             <a href="@Url.Action("List", "Aphorisms")">Кратко</a>
                         </li>
+                        <li>
+                            <a href="@Url.Action("List", "Humor")">Юмор</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-6 col-sm-6">
@@ -35,7 +38,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h6 class="header">Последние публикации</h6>
-                    @Html.Action("Last", new { controller= "Articles", amount=3 })
+                    @Html.Action("Last", new { controller = "Articles", amount = 3 })
                 </div>
                 <div class="col-md-4">
                     <ul class="menu">
@@ -92,7 +95,7 @@
                         @if (!Request.IsLocal)
                         {
                         <!--LiveInternet counter-->
-                        <script type="text/javascript">
+                            <script type="text/javascript">
 <!--
 document.write("<a href='//www.liveinternet.ru/click' "+
 "target=_blank><img src='//counter.yadro.ru/hit?t14.6;r"+
