--- a/GE.WebUI/less/humor.less
+++ b/GE.WebUI/less/humor.less
@@ -18,8 +18,12 @@
 }
 
 .humor-list__info {
-    margin-bottom: @def-pad;
     font-size: 12px;
+}
+
+.humor-list__author{
+    font-size: 12px;
+    margin-bottom: @def-pad;
 }
 
 //humor-page
