--- a/GE.WebAdmin/Views/Humor/Edit.cshtml
+++ b/GE.WebAdmin/Views/Humor/Edit.cshtml
@@ -21,7 +21,7 @@
                 @Html.HiddenFor(x => x.Id)
                 @Html.HiddenFor(x => x.ModelCoreType)
                 @Html.AntiForgeryToken()
-                <button type="submit" class="btn btn-danger" onclick="if (!confirm('Удалить запись?')) { return false;}">Удалить новость</button>
+                <button type="submit" class="btn btn-danger" onclick="if (!confirm('Удалить запись?')) { return false;}">Удалить юмор</button>
             </form>
         </div>
     </div>
@@ -137,6 +137,11 @@
                 </div>
             </div>
             <br />
+            <div class="form-group">
+                @Html.LabelFor(x => x.SourceUrl, new { @class = "control-label" })
+                @Html.EditorFor(x => x.SourceUrl, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите url источника материала" } })
+                @Html.ValidationMessageFor(x => x.SourceUrl)
+            </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
