--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -22,9 +22,9 @@
     <a href="@Url.Action("List", "news")" class="btn btn-default btn-transparent white">Все новости</a>
 </div>
 
-@*<section>
-    @Html.Action("randomList", "sitetests")
-</section>*@
+<section>
+    @Html.Action("RandomList", "SiteTests")
+</section>
 
 @Html.Action("ForGamersBlock", "Articles")
 
