--- a/GE.WebAdmin/Views/SiteTestSubjects/_Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTestSubjects/_Edit.cshtml
@@ -3,29 +3,23 @@
     var isNew = Model.Id == 0;
 }
 
-@using (Ajax.BeginForm("Edit", "SiteTestSubjects", new AjaxOptions { HttpMethod="post", UpdateTargetId= "grid-test-subjects", OnComplete= "$('#test-modal').modal('hide');" }, new { @autocomplete="off"}))
+@using (Ajax.BeginForm("Edit", new { controller= "SiteTestSubjects" }, new AjaxOptions { HttpMethod="post", UpdateTargetId= "grid-test-subjects", OnComplete= "$('#test-modal').modal('hide');" }, new { @autocomplete="off"}))
 {
     @Html.AntiForgeryToken()
     <input type="hidden" name="subject.Id" value="@Model.Id" />
     <input type="hidden" name="subject.TestId" value="@Model.TestId" />
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                @Html.LabelFor(x => x.Title, new { @class = "control-label" })
-                <input type="text" class="form-control" name="subject.Title" value="@Model.Title" placeholder="Введите заголовок (не более 200 знаков)" />
-                @Html.ValidationMessageFor(x => x.Title)
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                @Html.LabelFor(x => x.PictureId, new { @class = "control-label" })
-                @Html.EditorFor(x=>x.PictureId)
-                @Html.ValidationMessageFor(x => x.PictureId)
-            </div>
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+        <textarea class="form-control" name="subject.Title" placeholder="Введите заголовок (не более 400 знаков)">@Model.Title</textarea>
+        @Html.ValidationMessageFor(x => x.Title)
     </div>
-    
+
+    <div class="form-group">
+        @Html.LabelFor(x => x.PictureId, new { @class = "control-label" })
+        @Html.EditorFor(x => x.PictureId)
+        @Html.ValidationMessageFor(x => x.PictureId)
+    </div>
 
     <div class="form-group">
         @Html.LabelFor(x => x.Description, new { @class = "control-label" })
