--- a/GE.WebUI/less/site-tests.less
+++ b/GE.WebUI/less/site-tests.less
@@ -152,6 +152,16 @@
     margin-bottom: @def-pad*2;
 }
 
+.test-normal-q-list .big{
+    font-weight:700;
+}
+
+.test-normal-q-list .small{
+    font-style:italic;
+    font-size:65%;
+    color:#777;
+}
+
 //test-results
 .test-result.normal {
     margin-bottom: @def-pad*3;
